# bailando-cmake-base

./: CMakeLists.txt  README.md  build.sh
lib/: CMakeLists.txt
lib/basic_include/: CMakeLists.txt
lib/basic_include/include/: basic_include.h
lib/basic_include/src/: basic_include.cpp
src/: main.cpp
